--- a/myapp/templates/shop-single.html
+++ b/myapp/templates/shop-single.html
@@ -1,28 +1,312 @@
- 
-​{% load static %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+      <meta charset="utf-8">
+    <title>Trilogy Shop </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" media="screen" href="{% static 'css/vendor.min.css' %}">
+    <link id="mainStyles" rel="stylesheet" media="screen" href="{% static 'css/styles.min.css' %}">
+    <link rel="icon" href="static/img/logo/mainlogo.png" style="border-radius: 50px;">
+    <link rel="stylesheet" href="{% static 'css/header.css' %}">
 </head>
 <body>
-  <div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <img src="{{ product.product_image.url }}" alt="{{ product.product_name }}" class="img-fluid">
-        </div>
-        <div class="col-md-6">
-            <h2>{{ product.product_name }}</h2>
-            <h4>₹{{ product.product_price }}</h4>
-
-            <form action="{% url 'cart' product.id %}" method="post">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-primary">Add to Cart</button>
-            </form>
+  <header class="navbar navbar-expand-lg navbar-light bg-light p-3">
+    <div class="container-fluid d-flex align-items-center justify-content-between">
+        <a href="{% url 'home' %}" class="me-3" >
+            <img src="{% static 'img/logo/logo_2.png' %}" style="height: 75px; border-radius: 20px;">
+        </a>
+        <nav style="margin-top: 20px;">
+            <ul class="navbar-nav d-flex flex-row gap-4 align-items-center">
+                <li class="nav-item">
+                    <a class="nav-link" id="nav_l1_1" href="{% url 'home' %}"><h3>Home</h3></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="nav_l1_2" href="{% url 'shopgrid' %}"><h3>Shop</h3></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="nav_l1_3" href="{% url 'about' %}"><h3>About</h3></a>
+                </li>
+            </ul>
+        </nav>
+        <div class="dropdown">
+            <a href="#" class="d-flex align-items-center" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="{% static 'img/profilelogo.jpg' %}" style="height: 40px; border-radius: 50%; border: 1.5px solid black; margin-right: 25px;">
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                <li><a class="dropdown-item" href="{% url 'account' %}">👤 Account</a></li>
+                <li><a class="dropdown-item" href="{% url 'cart' %}">🛒 Cart</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item text-danger" href="{% url 'logout' %}">🔒 Logout</a></li>
+            </ul>
         </div>
     </div>
-</div>
+  </header>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+  <div class="offcanvas-wrapper">
+    
+    <div class="container padding-bottom-3x mb-1">
+      <div class="row">
+        <div class="col-md-6">
+          <!-- < class="product-gallery"> -->
+                <img src="{{ product.product_image.url }}" alt="{{ product.product_name }}" style="width: 240px; margin-left: 180px; margin-top: 40px; box-shadow: 20px;"  >
+        </div>
+        <!-- Product Info-->
+        <div class="col-md-6">
+          <div class="padding-top-2x mt-2 hidden-md-up"></div>
+          <div class="rating-stars">
+            <i class="icon-star filled"></i>
+            <i class="icon-star filled"></i>
+            <i class="icon-star filled"></i>
+            <i class="icon-star filled"></i>
+            <i class="icon-star"></i>
+          </div>
+          <h2>{{ product.product_name }}</h2>
+          <h4>₹{{ product.product_price }}</h4>
+            
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta voluptatibus quos ea dolore rem, molestias laudantium
+            et explicabo assumenda fugiat deserunt in, facilis laborum excepturi aliquid nobis ipsam deleniti aut? Aliquid
+            sit hic id velit qui fuga nemo suscipit obcaecati. Officia nisi quaerat minus nulla saepe aperiam sint possimus
+            magni veniam provident.</p>
+          <div class="row margin-top-1x">
+            
+            <div class="col-sm-3">
+              <div class="form-group">
+                <label for="quantity">Quantity</label>
+                <select class="form-control" id="quantity">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
+              </div>
+            </div>
+          </div>
+          
+          <hr class="mb-3">
+          <div class="d-flex flex-wrap justify-content-between">
+            <div class="entry-share mt-2 mb-2">
+              <span class="text-muted">Share:</span>
+              <div class="share-links">
+                <a class="social-button shape-circle sb-facebook" href="https://www.facebook.com/" data-toggle="tooltip" data-placement="top" title="Facebook">
+                    <i class="bi bi-facebook" style="font-size: 1.5em;"></i>
+                </a>
+                <a class="social-button shape-circle sb-twitter" href="https://www.x.com/" data-toggle="tooltip" data-placement="top" title="X">
+                    <i class="bi bi-twitter-x" style="font-size: 1.5em;"></i>
+                </a>
+                <a class="social-button shape-circle sb-instagram" href="https://www.instagram.com/" data-toggle="tooltip" data-placement="top" title="Instagram">
+                    <i class="bi bi-instagram" style="font-size: 1.5em;"></i>
+                </a>
+                <a class="social-button shape-circle sb-google-plus" href="https://web.whatsapp.com/" data-toggle="tooltip" data-placement="top" title="Whatsapp">
+                    <i class="bi bi-whatsapp" style="font-size: 1.2em;"></i>
+                </a>
+              </div>
+            </div>
+            <div class="sp-buttons mt-2 mb-2">
+
+              <a class="btn btn-primary" data-toast data-toast-type="success" data-toast-position="topRight" data-toast-icon="icon-circle-check"
+                data-toast-title="Product" data-toast-message="successfuly added to cart!" href="{% url 'cart' %}">Cart</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    
+    <!-- Site Footer-->
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <!-- Contact Info-->
+            <section class="widget widget-light-skin">
+              <h3 class="widget-title">Get In Touch With Us</h3>
+              <p class="text-white">Phone: 00 33 169 7720</p>
+              <ul class="list-unstyled text-sm text-white">
+                <li>
+                  <span class="opacity-50">Monday-Friday:</span>9.00 am - 8.00 pm</li>
+                <li>
+                  <span class="opacity-50">Saturday:</span>10.00 am - 6.00 pm</li>
+              </ul>
+              <p>
+                <a class="navi-link-light" href="#">support@tshop.com</a>
+              </p>
+              <a class="social-button shape-circle sb-facebook sb-light-skin" href="#">
+                <i class="socicon-facebook"></i>
+              </a>
+              <a class="social-button shape-circle sb-twitter sb-light-skin" href="#">
+                <i class="socicon-twitter"></i>
+              </a>
+              <a class="social-button shape-circle sb-instagram sb-light-skin" href="#">
+                <i class="socicon-instagram"></i>
+              </a>
+              <a class="social-button shape-circle sb-google-plus sb-light-skin" href="#">
+                <i class="socicon-googleplus"></i>
+              </a>
+            </section>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <!-- Mobile App Buttons-->
+            <section class="widget widget-light-skin">
+              <h3 class="widget-title">Our Mobile App</h3>
+              <a class="market-button apple-button mb-light-skin" href="#">
+                <span class="mb-subtitle">Download on the</span>
+                <span class="mb-title">App Store</span>
+              </a>
+              <a class="market-button google-button mb-light-skin" href="#">
+                <span class="mb-subtitle">Download on the</span>
+                <span class="mb-title">Google Play</span>
+              </a>
+              <a class="market-button windows-button mb-light-skin" href="#">
+                <span class="mb-subtitle">Download on the</span>
+                <span class="mb-title">Windows Store</span>
+              </a>
+            </section>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <!-- About Us-->
+            <section class="widget widget-links widget-light-skin">
+              <h3 class="widget-title">About Us</h3>
+              <ul>
+                <li>
+                  <a href="#">Careers</a>
+                </li>
+                <li>
+                  <a href="#">About tshop</a>
+                </li>
+                <li>
+                  <a href="#">Our Story</a>
+                </li>
+                <li>
+                  <a href="#">Services</a>
+                </li>
+                <li>
+                  <a href="#">Our Blog</a>
+                </li>
+              </ul>
+            </section>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <!-- Account / Shipping Info-->
+            <section class="widget widget-links widget-light-skin">
+              <h3 class="widget-title">Account &amp; Shipping Info</h3>
+              <ul>
+                <li>
+                  <a href="#">Your Account</a>
+                </li>
+                <li>
+                  <a href="#">Shipping Rates & Policies</a>
+                </li>
+                <li>
+                  <a href="#">Refunds & Replacements</a>
+                </li>
+                <li>
+                  <a href="#">Taxes</a>
+                </li>
+                <li>
+                  <a href="#">Delivery Info</a>
+                </li>
+                <li>
+                  <a href="#">Affiliate Program</a>
+                </li>
+              </ul>
+            </section>
+          </div>
+        </div>
+        <hr class="hr-light mt-2 margin-bottom-2x">
+        <div class="row">
+          <div class="col-md-7 padding-bottom-1x">
+            <!-- Payment Methods-->
+            <div class="margin-bottom-1x" style="max-width: 615px;">
+              <img src="static/img/payment_methods.png" alt="Payment Methods">
+            </div>
+          </div>
+          <div class="col-md-5 padding-bottom-1x">
+            <div class="margin-top-1x hidden-md-up"></div>
+            <!--Subscription-->
+            <form class="subscribe-form" action="//rokaux.us12.list-manage.com/subscribe/post?u=c7103e2c981361a6639545bd5&amp;amp;id=1194bb7544"
+              method="post" target="_blank" novalidate>
+              <div class="clearfix">
+                <div class="input-group input-light">
+                  <input class="form-control" type="email" name="EMAIL" placeholder="Your e-mail">
+                  <span class="input-group-addon">
+                    <i class="icon-mail"></i>
+                  </span>
+                </div>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                  <input type="text" name="b_c7103e2c981361a6639545bd5_1194bb7544" tabindex="-1">
+                </div>
+                <button class="btn btn-primary" type="submit">
+                  <i class="icon-check"></i>
+                </button>
+              </div>
+              <span class="form-text text-sm text-white opacity-50">Subscribe to our Newsletter to receive early discount offers, latest news, sales and promo information.</span>
+            </form>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </div>
+  
+  <!-- Photoswipe container-->
+  <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="pswp__bg"></div>
+    <div class="pswp__scroll-wrap">
+      <div class="pswp__container">
+        <div class="pswp__item"></div>
+        <div class="pswp__item"></div>
+        <div class="pswp__item"></div>
+      </div>
+      <div class="pswp__ui pswp__ui--hidden">
+        <div class="pswp__top-bar">
+          <div class="pswp__counter"></div>
+          <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+          <button class="pswp__button pswp__button--share" title="Share"></button>
+          <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+          <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+          <div class="pswp__preloader">
+            <div class="pswp__preloader__icn">
+              <div class="pswp__preloader__cut">
+                <div class="pswp__preloader__donut"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+          <div class="pswp__share-tooltip"></div>
+        </div>
+        <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)"></button>
+        <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)"></button>
+        <div class="pswp__caption">
+          <div class="pswp__caption__center"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <a class="scroll-to-top-btn" href="#">
+    <i class="icon-arrow-up"></i>
+  </a>
+  <div class="site-backdrop"></div>
+  <script src=" {% static 'js/vendor.min.js' %}"></script>
+  <script src=" {% static 'js/scripts.min.js' %}"></script>
+  <script src="{% static 'customizer/customizer.min.js' %}"></script>
+  <script src=" {% static 'js/modernizr.min.js' %}"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118296250-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-118296250-1');
+  </script>
+
 </body>
-</html>​​​​
+
+</html>
