--- a/myapp/static/css/header.css
+++ b/myapp/static/css/header.css
@@ -1,59 +1,221 @@
-.Search_input {
-  width: 106%;
-  max-width: 340px;
-  height: 42px;
-  padding: 12px;
-  border-radius: 12px;
-  border: 1px solid black;
-  outline: none;
-  transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
-  box-shadow: 0px 0px 20px -18px;
-  /* background-color: rgb(126, 124, 124); */
-  text-decoration-color: black;
+
+.popup {
+  --burger-line-width: 1.125em;
+  --burger-line-height: 0.125em;
+  --burger-offset: 0.625em;
+  --burger-bg: #00bf63;
+  --burger-color: #333;
+  --burger-line-border-radius: 0.1875em;
+  --burger-diameter: 3.125em;
+  --burger-btn-border-radius: calc(var(--burger-diameter) / 2);
+  --burger-line-transition: 0.3s;
+  --burger-transition: all 0.1s ease-in-out;
+  --burger-hover-scale: 1.1;
+  --burger-active-scale: 0.95;
+  --burger-enable-outline-color: var(--burger-bg);
+  --burger-enable-outline-width: 0.125em;
+  --burger-enable-outline-offset: var(--burger-enable-outline-width);
+  /* nav */
+  --nav-padding-x: 0.25em;
+  --nav-padding-y: 0.625em;
+  --nav-border-radius: 0.375em;
+  --nav-border-color: #ccc;
+  --nav-border-width: 0.0625em;
+  --nav-shadow-color: rgba(0, 0, 0, 0.2);
+  --nav-shadow-width: 0 1px 5px;
+  --nav-bg: #eee;
+  --nav-font-family: "Poppins", sans-serif;
+  --nav-default-scale: 0.8;
+  --nav-active-scale: 1;
+  --nav-position-left: 0;
+  --nav-position-right: unset;
+
+  --nav-title-size: 0.625em;
+  --nav-title-color: #777;
+  --nav-title-padding-x: 1rem;
+  --nav-title-padding-y: 0.25em;
+  /* nav button */
+  --nav-button-padding-x: 1rem;
+  --nav-button-padding-y: 0.375em;
+  --nav-button-border-radius: 0.375em;
+  --nav-button-font-size: 17px;
+  --nav-button-hover-bg: #00bf63;
+  --nav-button-hover-text-color: #fff;
+  --nav-button-distance: 0.875em;
+  /* underline */
+  --underline-border-width: 0.0625em;
+  --underline-border-color: #ccc;
+  --underline-margin-y: 0.3125em;
 }
 
-.Search_input:hover {
-  border: 2.2px solid rgb(155, 153, 153);
-  box-shadow: 0px 0px 20px -17px;
+.popup {
+  display: inline-block;
+  text-rendering: optimizeLegibility;
+  position: relative;
 }
 
-.Search_input:active {
-  transform: scale(0.95);
+.popup input {
+  display: none;
 }
 
-.Search_input:focus {
-  border: 2px solid grey;
+.burger {
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  background: var(--burger-bg);
+  width: var(--burger-diameter);
+  height: var(--burger-diameter);
+  border-radius: var(--burger-btn-border-radius);
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  transition: var(--burger-transition);
+  outline: var(--burger-enable-outline-width) solid transparent;
+  margin-right: 30px;
+  outline-offset: 0;
 }
 
-#nav_ul{
+.popup-window {
+  transform: scale(var(--nav-default-scale));
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  padding: var(--nav-padding-y) var(--nav-padding-x);
+  background: var(--nav-bg);
+  font-family: var(--nav-font-family);
+  color: var(--nav-text-color);
+  border-radius: var(--nav-border-radius);
+  box-shadow: var(--nav-shadow-width) var(--nav-shadow-color);
+  border: var(--nav-border-width) solid var(--nav-border-color);
+  top: calc(
+    var(--burger-diameter) + var(--burger-enable-outline-width) +
+      var(--burger-enable-outline-offset)
+  );
+  left: var(--nav-position-left);
+  right: var(--nav-position-right);
+  transition: var(--burger-transition);
+  margin-top: 10px;
+}
 
-  margin-left: 570px;
-}
-#nav_l1_1:hover, #nav_l1_2:hover, #nav_l1_3:hover{
-    color: blue;
-  
-}
-.dropdown:hover .dropdown-menu {
-      display: block;
-      margin-top: 0;
-  }
-
-  /* Remove Bootstrap default dropdown arrow */
-#profileDropdown::after {
-    display: none !important;
-}
-ul {
-  list-style: none; 
-  padding: 0;
+.popup-window legend {
+  padding: var(--nav-title-padding-y) var(--nav-title-padding-x);
   margin: 0;
+  color: var(--nav-title-color);
+  font-size: var(--nav-title-size);
+  text-transform: uppercase;
 }
 
-ul li a {
-  text-decoration: none; /* Removes underline */
-  color: inherit; /* Keeps the default text color */
+.popup-window ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
-ul li a:hover {
-  text-decoration: none; /* Ensures no underline on hover */
+.popup-window ul button {
+  outline: none;
+  width: 100%;
+  border: none;
+  background: none;
+  display: flex;
+  align-items: center;
+  color: var(--burger-color);
+  font-size: var(--nav-button-font-size);
+  padding: var(--nav-button-padding-y) var(--nav-button-padding-x);
+  white-space: nowrap;
+  border-radius: var(--nav-button-border-radius);
+  cursor: pointer;
+  column-gap: var(--nav-button-distance);
 }
 
+.popup-window ul li:nth-child(1) svg,
+.popup-window ul li:nth-child(2) svg {
+  color: #00bf63;
+}
+
+.popup-window ul li:nth-child(4) svg,
+.popup-window ul li:nth-child(5) svg {
+  color: rgb(153, 153, 153);
+}
+
+.popup-window ul li:nth-child(7) svg {
+  color: red;
+}
+
+.popup-window hr {
+  margin: var(--underline-margin-y) 0;
+  border: none;
+  border-bottom: var(--underline-border-width) solid
+    var(--underline-border-color);
+}
+
+.popup-window ul button:hover,
+.popup-window ul button:focus-visible,
+.popup-window ul button:hover svg,
+.popup-window ul button:focus-visible svg {
+  color: var(--nav-button-hover-text-color);
+  background: var(--nav-button-hover-bg);
+}
+
+.burger:hover {
+  transform: scale(var(--burger-hover-scale));
+}
+
+.burger:active {
+  transform: scale(var(--burger-active-scale));
+}
+
+.burger:focus:not(:hover) {
+  outline-color: var(--burger-enable-outline-color);
+  outline-offset: var(--burger-enable-outline-offset);
+}
+
+.popup input:checked + .burger span:nth-child(1) {
+  top: 50%;
+  transform: translateY(-50%) rotate(45deg);
+}
+
+.popup input:checked + .burger span:nth-child(2) {
+  bottom: 50%;
+  transform: translateY(50%) rotate(-45deg);
+}
+
+.popup input:checked + .burger span:nth-child(3) {
+  transform: translateX(
+    calc(var(--burger-diameter) * -1 - var(--burger-line-width))
+  );
+}
+
+.popup input:checked ~ nav {
+  transform: scale(var(--nav-active-scale));
+  visibility: visible;
+  opacity: 1;
+}
+
+
+.navbar-nav {
+  margin-left: -20px; /* Shift navbar items slightly to the left */
+}
+.navbar-nav h3 {
+  margin-right: 25px; /* Increase spacing between navbar items */
+}
+.navbar-nav a {
+  color: black;
+  text-decoration: none;
+}
+.navbar-nav a:hover {
+  color: #0da9ef;
+}
+.popup {
+  margin-left: -10px; /* Shift profile icon slightly to the left */
+}
+.popup .burger {
+  background: #0da9ef !important; /* Set profile icon default color */
+}
+.popup-window ul button:hover, .popup-window ul button:focus-visible,
+.popup-window ul button:hover svg, .popup-window ul button:focus-visible svg {
+  background: none !important; /* Remove hover background */
+}
+.popup-window ul li:nth-child(1) svg {
+  color: #0da9ef !important; /* Ensure profile icon color */
+}
