--- a/myapp/templates/cart.html
+++ b/myapp/templates/cart.html
@@ -52,11 +52,75 @@
 .bin-button:active {
   transform: scale(0.9);
 }
+#footer_mail_container{
+      margin-left: 400px;
+    }
+    #footer_mail{
+      height: 29px;
+      width: 240px;
+      border-radius: 10px;
+      border: transparent;
+      color: transparent;
+      background-color: transparent;
+      margin-left: 2px;
+    }
+    #footer_mail:active{
+      border: 1px solid white;
+    }  
 #product_dropdown{
   height: 40px;
   width: 80px;
   text-align: center;
   border-radius: 10px;
+}
+/* From Uiverse.io by Creatlydev */ 
+.pay_Btn {
+  width: 130px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(15, 15, 15);
+  border: none;
+  color: white;
+  font-weight: 600;
+  gap: 8px;
+  cursor: pointer;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.103);
+  position: relative;
+  overflow: hidden;
+  transition-duration: .3s;
+}
+
+.svgIcon {
+  width: 16px;
+}
+
+.svgIcon path {
+  fill: white;
+}
+
+.pay_Btn::before {
+  width: calc(100% + 40px);
+  aspect-ratio: 1/1;
+  position: absolute;
+  content: "";
+  background-color: white;
+  border-radius: 50%;
+  left: -20px;
+  top: 50%;
+  transform: translate(-150%, -50%);
+  transition-duration: .5s;
+  mix-blend-mode: difference;
+}
+
+.pay_Btn:hover::before {
+  transform: translate(0, -50%);
+}
+
+.pay_Btn:active {
+  transform: translateY(4px);
+  transition-duration: .3s;
 }
 
 </style>
@@ -65,35 +129,47 @@
 <body>
   <header class="navbar navbar-expand-lg navbar-light bg-light p-3">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-        <a href="{% url 'home' %}" class="me-3">
-            <img src="static/img/logo/logo_2.png" style="height: 75px; border-radius: 20px;">
-        </a>
-        <nav style="margin-top: 20px;">
-            <ul class="navbar-nav d-flex flex-row gap-4 align-items-center">
-                <li class="nav-item">
-                    <a class="nav-link" id="nav_l1_1" href="{% url 'home' %}"><h3>Home</h3></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="nav_l1_2" href="{% url 'shopgrid' %}"><h3>Shop</h3></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="nav_l1_3" href="{% url 'about' %}"><h3>About</h3></a>
-                </li>
-            </ul>
-        </nav>
-        <div class="dropdown">
-            <a href="#" class="d-flex align-items-center" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="static/img/profilelogo.jpg" style="height: 40px; border-radius: 50%; border: 1.5px solid black; margin-right: 25px;">
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-                <li><a class="dropdown-item" href="{% url 'account' %}">👤 Account</a></li>
-                <li><a class="dropdown-item" href="{% url 'cart' %}">🛒 Cart</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item text-danger" href="{% url 'logout' %}">🔒 Logout</a></li>
-            </ul>
+      <a href="{% url 'home' %}" class="me-3">
+        <img src="{% static 'img/logo/logo_2.png' %}" style="height: 75px; width: 79px; border-radius: 20px;">
+      </a>
+      <nav class="navbar-nav d-flex align-items-center">
+        <h3 class="me-2" style="margin-right: 15px;">
+          <a href="{% url 'home' %}">Home</a>
+        </h3>
+        <h3 class="me-2" style="margin-right: 15px;">
+          <a href="{% url 'shopgrid' %}">Shop</a>
+        </h3>
+        <h3 class="me-2" style="margin-right: 15px;">
+          <a href="{% url 'cart' %}">Cart</a>
+        </h3>
+      </nav>
+      <label class="popup">
+        <input type="checkbox" />
+        <div tabindex="0" class="burger" style="height: 30px; width: 32px;">
+          <svg viewBox="0 0 24 24" fill="white" height="15" width="15" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 2c2.757 0 5 2.243 5 5.001 0 2.756-2.243 5-5 5s-5-2.244-5-5c0-2.758 2.243-5.001 5-5.001zm0-2c-3.866 0-7 3.134-7 7.001 0 3.865 3.134 7 7 7s7-3.135 7-7c0-3.867-3.134-7.001-7-7.001zm6.369 13.353c-.497.498-1.057.931-1.658 1.302 2.872 1.874 4.378 5.083 4.972 7.346h-19.387c.572-2.29 2.058-5.503 4.973-7.358-.603-.374-1.162-.811-1.658-1.312-4.258 3.072-5.611 8.506-5.611 10.669h24c0-2.142-1.44-7.557-5.631-10.647z"></path>
+          </svg>
         </div>
+        <nav class="popup-window">
+          <ul>
+            <li>
+              <button>
+                <a>Account</a>
+              </button>
+            </li>
+            <li>
+              <button>
+                <a href="{% url 'about' %}">About</a>
+              </button>
+              <button>
+                <a href="{% url 'logout' %}" style="color: red;">Logout</a>
+              </button>
+            </li>
+          </ul>
+        </nav>
+      </label>
     </div>
-  </header>  <!-- Off-Canvas Wrapper-->
+  </header>
   <div class="offcanvas-wrapper">
     <div class="container padding-bottom-3x mb-1">
       <!-- Alert-->
@@ -193,15 +269,23 @@
 <!-- Display Grand Total -->
 <tfoot>
     <tr>
-        <td colspan="3" class="text-right"><strong>Total Bill:</strong></td>
-        <td class="text-center text-lg text-medium" id="grand-total">{{ total_bill }}</td>
-    </tr>
+        <td colspan="3" class="text-right"><h4><strong>Total Bill:</strong></h4></td>
+        <td class="text-center text-lg text-medium" id="grand-total"><h3><strong>{{ total_bill }}</strong></h3></td>
+        <td>
+          <form action="{% url 'billing_detail' %}" method="post">
+            {% csrf_token %}
+            <button class="pay_Btn">
+              Buy Now
+              <svg viewBox="0 0 576 512" class="svgIcon"><path d="M512 80c8.8 0 16 7.2 16 16v32H48V96c0-8.8 7.2-16 16-16H512zm16 144V416c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V224H528zM64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H512c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zm56 304c-13.3 0-24 10.7-24 24s10.7 24 24 24h48c13.3 0 24-10.7 24-24s-10.7-24-24-24H120zm128 0c-13.3 0-24 10.7-24 24s10.7 24 24 24H360c13.3 0 24-10.7 24-24s-10.7-24-24-24H248z"></path></svg>
+            </button>
+          </form>
+        </td>
+      </tr>
 </tfoot>
-
-
           </tbody>
         </table>
       </div>
+      
       <hr>
     </div>
     <!-- Site Footer-->
