--- a/myapp/templates/shop-single.html
+++ b/myapp/templates/shop-single.html
@@ -18,33 +18,45 @@
 <body>
   <header class="navbar navbar-expand-lg navbar-light bg-light p-3">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-        <a href="{% url 'home' %}" class="me-3" >
-            <img src="{% static 'img/logo/logo_2.png' %}" style="height: 75px; border-radius: 20px;">
-        </a>
-        <nav style="margin-top: 20px;">
-            <ul class="navbar-nav d-flex flex-row gap-4 align-items-center">
-                <li class="nav-item">
-                    <a class="nav-link" id="nav_l1_1" href="{% url 'home' %}"><h3>Home</h3></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="nav_l1_2" href="{% url 'shopgrid' %}"><h3>Shop</h3></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="nav_l1_3" href="{% url 'about' %}"><h3>About</h3></a>
-                </li>
-            </ul>
-        </nav>
-        <div class="dropdown">
-            <a href="#" class="d-flex align-items-center" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="{% static 'img/profilelogo.jpg' %}" style="height: 40px; border-radius: 50%; border: 1.5px solid black; margin-right: 25px;">
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-                <li><a class="dropdown-item" href="{% url 'account' %}">👤 Account</a></li>
-                <li><a class="dropdown-item" href="{% url 'cart' %}">🛒 Cart</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item text-danger" href="{% url 'logout' %}">🔒 Logout</a></li>
-            </ul>
+      <a href="{% url 'home' %}" class="me-3">
+        <img src="{% static 'img/logo/logo_2.png' %}" style="height: 75px; width: 79px; border-radius: 20px;">
+      </a>
+      <nav class="navbar-nav d-flex align-items-center">
+        <h3 class="me-2" style="margin-right: 15px;">
+          <a href="{% url 'home' %}">Home</a>
+        </h3>
+        <h3 class="me-2" style="margin-right: 15px;">
+          <a href="{% url 'shopgrid' %}">Shop</a>
+        </h3>
+        <h3 class="me-2" style="margin-right: 15px;">
+          <a href="{% url 'cart' %}">Cart</a>
+        </h3>
+      </nav>
+      <label class="popup">
+        <input type="checkbox" />
+        <div tabindex="0" class="burger" style="height: 30px; width: 32px;">
+          <svg viewBox="0 0 24 24" fill="white" height="15" width="15" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 2c2.757 0 5 2.243 5 5.001 0 2.756-2.243 5-5 5s-5-2.244-5-5c0-2.758 2.243-5.001 5-5.001zm0-2c-3.866 0-7 3.134-7 7.001 0 3.865 3.134 7 7 7s7-3.135 7-7c0-3.867-3.134-7.001-7-7.001zm6.369 13.353c-.497.498-1.057.931-1.658 1.302 2.872 1.874 4.378 5.083 4.972 7.346h-19.387c.572-2.29 2.058-5.503 4.973-7.358-.603-.374-1.162-.811-1.658-1.312-4.258 3.072-5.611 8.506-5.611 10.669h24c0-2.142-1.44-7.557-5.631-10.647z"></path>
+          </svg>
         </div>
+        <nav class="popup-window">
+          <ul>
+            <li>
+              <button>
+                <a>Account</a>
+              </button>
+            </li>
+            <li>
+              <button>
+                <a href="{% url 'about' %}">About</a>
+              </button>
+              <button>
+                <a href="{% url 'logout' %}" style="color: red;">Logout</a>
+              </button>
+            </li>
+          </ul>
+        </nav>
+      </label>
     </div>
   </header>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
